--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <script>
-        fetch('https://generalsphericaloctagon.mopigames20.repl.co/news.json')
+        fetch('https://ce96d884-3dc3-48e9-aff1-ca3bc4faef05-00-2kgq1t88p47wh.janeway.replit.dev/news.json')
         .then(response => response.json())
         .then(data => {
           let content = data[0].content;
