--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blåhaj Café</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="assets/pfp.webp">
+  <link rel="icon" href="assets/6h6Ye25.png">
   <meta name="description"
     content="We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.">
-  <meta name="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+  <meta name="image" content="https://blahaj.cafe/assets/6h6Ye25.png">
   <meta itemprop="name" content="Blåhaj Café">
   <meta itemprop="description"
     content="We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.">
-  <meta itemprop="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+  <meta itemprop="image" content="https://blahaj.cafe/assets/6h6Ye25.png">
   <meta name="og:title" content="Blåhaj Café">
   <meta name="og:description"
     content="We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.">
-  <meta name="og:image" content="https://girldick.estrogen.monster/assets/pfp.webp">
-  <meta name="og:url" content="https://girldick.estrogen.monster/">
+  <meta name="og:image" content="https://blahaj.cafe/assets/6h6Ye25.png">
+  <meta name="og:url" content="https://blahaj.cafe/">
   <meta name="og:site_name" content="Blåhaj Café">
   <meta name="og:locale" content="en_US">
   <meta name="og:type" content="website">
@@ -85,7 +85,7 @@
   </div>
   <div class="container">
     <div class="pfpdiv">
-      <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
+      <img class="pfp" src="assets/6h6Ye25.png" height="240" alt="Server image">
       <div class="bio">
         <h1>Welcome to <span style="color: #dbc1ac !important;">
             <bold>Blåhaj Café</bold>
