Update API endpoint for fetching news data

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <script>
-        fetch('https://ce96d884-3dc3-48e9-aff1-ca3bc4faef05-00-2kgq1t88p47wh.janeway.replit.dev/news.json')
+        fetch('http://62.171.160.80:3122/news.json')
         .then(response => response.json())
         .then(data => {
           let content = data[0].content;
