--- a/index.html
+++ b/index.html
@@ -165,21 +165,12 @@
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Appeal a ban</h1>
         <p>Fill out this form to appeal a ban. Please not that this form is not guaranteed to get you unbanned.:</p>
-        <div id="appeal-container" tabindex="-1">
-          <iframe id="appeal-iframe" src="about:blank" loading="lazy" style="border:none;" width="100%" height="600px"
-            frameborder="10" marginheight="0" marginwidth="0">Loading…</iframe>
-        </div>
+        <iframe src="https://onm6yd715wq.typeform.com/to/asi5xX9E" loading="lazy" style="border:none;" width="100%" height="600px"
+          frameborder="10" marginheight="0" marginwidth="0" scrolling="no" tabindex="-1">Loading…</iframe>
       </div>
     </div>
   </div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', (event) => {
-      setTimeout(() => {
-        document.getElementById('appeal-iframe').src = 'https://onm6yd715wq.typeform.com/to/asi5xX9E';
-      }, 100);
-    });
-  </script>
 </body>
 
 </html>
