chore: Update index.html and fetch Minecraft server status from API

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
           document.querySelector('.pfpnews').src = pfp;
         })
         .catch(error => console.error('Error:', error));
+
+        fetch('https://eu.mc-api.net/v3/server/ping/mc.blahaj.cafe:20436')
+        .then(response => response.json())
+        .then(data => {
+          if (data.online) {
+            document.querySelector('.boxes:nth-child(4)').innerHTML = `<h1 style="font-family: _i_love_glitterregular;">Minecraft server</h1><h4>The server is online! ${data.players.online} players are online right now!</h4>`;
+          } else {
+            document.querySelector('.boxes:nth-child(4)').innerHTML = `<h1 style="font-family: _i_love_glitterregular;">Minecraft server</h1><h4>The server is offline right now. Check back later!</h4>`;
+          }
+        })
   </script>
   <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">
@@ -113,7 +123,7 @@
         <h4>Welcome to ୨ ☕ Blåhaj Café 🥞୧!!!</h4>
         <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a
           safe space for many people without the negativity and mod abuse of many online communities. We have many
-          active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots,
+          active channels, fun stickers and emojis, active voice channels, a leveling system, music bots,
           and active moderation. Come and take a seat, we hope you like it here</p>
         <h4>• Blåhaj Café Staff</h4>
         <button class="button" aria-label="Join the discord server"
@@ -128,6 +138,10 @@
           <div id="pink"></div>
           <div id="blue" style="border-radius: 0px 0px 16px 16px;"></div>
         </div>
+      </div>
+      <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">Minecraft server</h1>
+
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">The staff team</h1>
