--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
       <div class="boxes minecraft">
       </div>
       <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">Bluemap</h1>
+        <p>See the full map here: <a>http://mc.blahaj.cafe:20026/</a></p>
+        <iframe src="http://mc.blahaj.cafe:20026/" loading="lazy" style="border:none;" width="100%" height="600px"
+          frameborder="10" marginheight="0" marginwidth="0" scrolling="no" tabindex="-1">Loading…</iframe>
+      </div>
+      <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">The staff team</h1>
         <h4>Here is each role on our staff team, and how they are here to help you!</h4>
         <p>~The Founder~</p>
