--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h1 style="font-family: _i_love_glitterregular;">Bluemap</h1>
         <p>See the full map here: <a>http://mc.blahaj.cafe:20026/</a></p>
         <iframe src="http://mc.blahaj.cafe:20026/" loading="lazy" style="border:none;" width="100%" height="600px"
-          frameborder="10" marginheight="0" marginwidth="0" scrolling="no" tabindex="-1">Loading…</iframe>
+          frameborder="10" marginheight="0" marginwidth="0" border-radius: 40px; scrolling="no" tabindex="-1">Loading…</iframe>
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">The staff team</h1>
