feat: Update Bluemap iframe URL to use HTTPS

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Bluemap</h1>
         <p>See the full map here: <a>https://mc.blahaj.cafe:20026/</a></p>
-        <iframe src="https://mc.blahaj.cafe:20026/" loading="lazy" style="border:none;" width="100%" height="600px"
+        <iframe src="https://bluemap.blahaj.cafe/" loading="lazy" style="border:none;" width="100%" height="600px"
           frameborder="10" marginheight="0" marginwidth="0" border-radius: 40px; scrolling="no" tabindex="-1">Loading…</iframe>
       </div>
       <div class="boxes">
