--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Bluemap</h1>
-        <p>See the full map here: <a>https://mc.blahaj.cafe:20026/</a></p>
+        <p>See the full map here: <a>https://bluemap.blahaj.cafe/</a></p>
         <iframe src="https://bluemap.blahaj.cafe/" loading="lazy" style="border:none;" width="100%" height="600px"
           frameborder="10" marginheight="0" marginwidth="0" border-radius: 40px; scrolling="no" tabindex="-1">Loading…</iframe>
       </div>
