feat: Update Minecraft server status display in index.html

--- a/index.html
+++ b/index.html
@@ -45,21 +45,25 @@
         })
         .catch(error => console.error('Error:', error));
 
-        fetch('https://eu.mc-api.net/v3/server/ping/mc.blahaj.cafe')
-        .then(response => response.json())
-        .then(data => {
-          let serverStatusHTML = `<h1 style="font-family: _i_love_glitterregular;">Minecraft server</h1>`;
-          if (data.online) {
-            serverStatusHTML += `<h4>The server is online! ${data.players.online} players are online right now!</h4>`;
-            serverStatusHTML += `<p>Server version: ${data.version.name}</p>`; // Added line for server version
-          } else {
-            serverStatusHTML += `<h4>The server is offline right now. Check back later!</h4>`;
-          }
-          serverStatusHTML += `<p>${data.description ? data.description : 'No description available.'}</p>`;
-          // Added line for server IP
-          serverStatusHTML += `<p>Server IP: <span style="color: #dbc1ac !important;"><bold>mc.blahaj.cafe:20436</bold></span></p>`;
-          document.querySelector('.minecraft').innerHTML = serverStatusHTML;
-        })
+        setInterval(() => {
+  fetch('https://eu.mc-api.net/v3/server/ping/mc.blahaj.cafe')
+    .then(response => response.json())
+    .then(data => {
+      let serverStatusHTML = `<h1 style="font-family: _i_love_glitterregular;">Minecraft server</h1>`;
+      if (data.online) {
+        serverStatusHTML += `<h4>The server is online! ${data.players.online}/${data.players.max} players are online right now!</h4>`;
+        serverStatusHTML += `<p>Server version: ${data.version.name}</p>`;
+        let playerNames = data.players.sample ? data.players.sample.map(player => player.name).join(', ') : 'No players online.';
+        serverStatusHTML += `<p>Online players: ${playerNames}</p>`;
+      } else {
+        serverStatusHTML += `<h4>The server is offline right now. Check back later!</h4>`;
+      }
+      serverStatusHTML += `<p>${data.description ? data.description : 'No description available.'}</p>`;
+      serverStatusHTML += `<p>Server IP: <span style="color: #dbc1ac !important;"><bold>mc.blahaj.cafe</bold></span></p>`;
+      serverStatusHTML += `<img src="${data.favicon}" alt="Server Favicon" style="width: 32px; height: 32px;" onerror="this.style.display='none';">`;
+      document.querySelector('.minecraft').innerHTML = serverStatusHTML;
+    })
+}, 10000);
   </script>
   <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">
